<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/game_files_explanation_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_files_explanation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_tv"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/permission_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:text="@string/permission_step_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_files_explanation_tv"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/permission_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_explanation"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permission_title_tv" />

        <Button
            android:id="@+id/ask_permission_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_permission"
            app:layout_constraintEnd_toEndOf="@+id/permission_text_tv"
            app:layout_constraintTop_toBottomOf="@+id/permission_text_tv"
            android:visibility="gone" />

        <TextView
            android:id="@+id/install_ccloader_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/install_ccloader_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ask_permission_btn" />

        <TextView
            android:id="@+id/install_ccloader_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/install_ccloader_explanation"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/install_ccloader_title_tv" />

        <Button
            android:id="@+id/install_ccloader_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/install_ccloader_text_tv"
            android:visibility="gone" />

        <TextView
            android:id="@+id/copy_instance_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/copy_instance_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/install_ccloader_btn"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/copy_instance_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_instance_explanation"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/copy_instance_title_tv"
            tools:visibility="visible" />

        <Button
            android:id="@+id/copy_instance_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_guide"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/copy_instance_text_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>