<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/launch_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/launch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/launch_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

        <ProgressBar
            android:id="@+id/mounting_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/launch_button"
            app:layout_constraintStart_toEndOf="@+id/launch_button"
            app:layout_constraintTop_toTopOf="@+id/launch_button" />

        <Button
            android:id="@+id/preferences_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences"
            app:layout_constraintEnd_toEndOf="@+id/launch_button"
            app:layout_constraintStart_toStartOf="@+id/launch_button"
            app:layout_constraintTop_toBottomOf="@+id/launch_button" />

        <Button
            android:id="@+id/about_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ViewStub
        android:id="@+id/setup_container_stub"
        android:inflatedId="@+id/setup_container"
        android:layout="@layout/guide_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</FrameLayout>